# bootcamp-fastapi

./: .gitignore  README.md  pyproject.toml  teste.txt
app/: dependencies.py  main.py
app/config/: db.py
app/middlewares/: logger.py
app/models/: assistant.py
app/routers/: assistant.py  generative.py  health_check.py
app/schemas/: assistant.py
app/services/: generative.py
app/utils/: logger.py
tests/: test_main.py
